--- a/2.Cryptography(密码学基础)/2.1_Hash_Functions.md
+++ b/2.Cryptography(密码学基础)/2.1_Hash_Functions.md
@@ -1,3 +1,231 @@
-## 密码学基础
+# 密码学基础
 
-解释哈希函数的作用以及其在区块链中的应用
+解释哈希函数的作用以及其在区块链中的应用。
+
+
+## Crypto-currcency
+
+加密货币是一种基于区块链技术的数字或虚拟货币，利用加密技术确保交易安全和控制新单位的生成。加密货币的特点包括：
+
+去中心化：大多数加密货币不依赖于中央银行或单一管理机构，而是通过分布式网络维护和管理。
+
+安全性：使用加密技术保护交易和控制新币的生成，防止伪造和双重支付。
+
+匿名性：许多加密货币允许用户在一定程度上保持匿名，尽管交易记录通常是公开的。
+
+全球性：加密货币可以在全球范围内进行交易，无需依赖传统金融系统。
+
+智能合约：一些加密货币（如以太坊）支持智能合约，可以自动执行和管理复杂的交易条件。
+
+常见的加密货币包括比特币（Bitcoin）、以太坊（Ethereum）、瑞波币（Ripple）等。它们在金融投资、跨境支付和数字资产管理等方面有广泛应用。
+
+
+### Hash 
+
+加密货币使用密码学中的两个功能：Hash和签名
+
+在Crypto-currcency中Hash要满足的三个性质：
+
+#### Cryptographic hash function：
+
+加密哈希函数是一种将任意大小的数据输入映射为固定大小的输出（哈希值）的函数，具有以下主要特性：
+
+单向性：从哈希值无法反推原始输入数据。
+抗碰撞性：难以找到两个不同的输入，它们生成相同的哈希值。
+抗篡改性：对输入数据的任何微小改动都会导致哈希值的显著变化。
+输出长度固定：无论输入数据的大小如何，输出的哈希值长度都是固定的。
+常见的加密哈希函数包括 SHA-256、SHA-3、MD5（虽然不再推荐用于安全目的）等。这些函数广泛应用于数字签名、数据完整性验证和密码存储等领域。
+
+### 性质1 Collision resistance：
+
+密码学中的一个重要概念，尤其在哈希函数中。它指的是一个哈希函数抵御碰撞的能力，即难以找到两个不同的输入，使得它们产生相同的哈希值。理想的哈希函数应当具备强大的碰撞抗性，以确保数据的完整性和安全性。
+
+在设计安全协议或加密系统时，collision resistance 是关键因素之一。如果哈希函数不具备良好的碰撞抗性，攻击者可以利用这种漏洞伪造数据或进行其他恶意行为。
+
+
+### 性质2 hiding
+
+x -> H(x) 
+具有hiding功能
+
+x -> H(x|none) 
+
+digital commitment:
+
+数字承诺（Digital Commitment）是一种密码学技术，用于确保信息在特定条件下的保密性和完整性。它通常涉及两个主要部分：
+
+承诺阶段：在这个阶段，发送者生成一个承诺值（commitment），通常通过哈希函数或其他加密方法将消息与随机值结合。发送者可以向接收者发送承诺值，但在此时不会透露实际的消息内容。
+
+揭示阶段：一旦承诺完成，发送者可以选择在特定条件下揭示原始消息及其所用的随机值。接收者可以使用承诺值和随机值来验证消息的真实性和完整性。
+
+数字承诺的特点包括：
+
+不可伪造性：一旦承诺，发送者不能更改或否认所承诺的信息。
+可验证性：接收者可以验证发送者揭示的信息是否与承诺值一致。
+隐私保护：在承诺阶段，消息的内容对接收者是隐藏的，直到发送者选择揭示。
+这种技术在许多应用中很重要，如电子投票、分布式系统中的协议设计和安全多方计算等。
+
+digital equivalent of a  sealed envelope.
+
+
+数字封闭信封的等价物通常指的是数字承诺（Digital Commitment）。在这个概念中，信息被“封存”在一个承诺值中，确保信息在某个时间点之后不能被更改或否认。具体来说，数字承诺可以实现以下功能：
+
+封闭性：发送者可以生成一个承诺值，这个值代表某条信息，但在承诺阶段，接收者无法知道该信息的内容。
+
+不可否认性：一旦承诺，发送者无法更改或否认其所承诺的信息，类似于在信封中放入信件后无法轻易修改信件内容。
+
+可验证性：在需要时，发送者可以揭示原始信息和相关的随机值，接收者可以通过这些信息验证承诺的有效性，确保信息的完整性。
+
+这种方法在电子投票、合同执行和安全通信等场景中具有重要应用。
+
+
+## 性质3 puzzle friendly
+
+“Puzzle friendly”通常指的是一种设计或系统，旨在使用户能够轻松地参与解谜或解决问题的过程。这种设计通常具有以下特征：
+
+直观性：界面和交互设计简单易懂，使用户能够快速上手，理解如何参与解谜。
+
+引导性：提供适当的提示或指导，帮助用户在遇到困难时不至于完全迷失。
+
+反馈机制：及时的反馈可以让用户知道他们的尝试是否正确，从而调整策略或方向。
+
+渐进性：难度逐步增加，让用户在解决初级谜题后逐渐挑战更复杂的内容，保持参与感和成就感。
+
+互动性：鼓励用户之间的交流和合作，增加乐趣和社交性。
+
+这种设计通常应用于教育游戏、逃脱房间、在线解谜游戏等场景，以提高用户的参与度和体验。你是在某个特定项目中考虑这种设计吗？
+
+H(x)
+256位
+
+000000xxxx...xxxx
+ 
+nonce与区块头中其他数值做为输入，得出一个hash值，这个值要小于指定的域值。
+
+H (block header) <=target
+
+#### Proof of work:
+
+工作量证明（Proof of Work，PoW）是一种共识机制，广泛应用于区块链和加密货币（如比特币）。其主要功能是确保网络安全性和防止双重支付，具体特点包括：
+
+计算难度：参与者（矿工）必须解决复杂的数学难题，以获得创建新块的权限。这个过程需要消耗大量计算资源和时间。
+
+防攻击性：由于解决难题需要投入真实的计算能力和能源，恶意攻击者需要花费巨大的资源才能控制网络，降低了攻击的可能性。
+
+竞争机制：矿工之间通过计算能力竞争，首先找到有效解的矿工可以将其解决的难题和新交易记录打包到区块中并添加到区块链上。
+
+奖励机制：成功创建新块的矿工会获得新产生的加密货币和交易费用作为奖励。
+
+工作量证明虽然有效增强了网络安全性，但也因其高能耗和低效率受到批评，因此一些新兴的区块链项目探索其他共识机制，如权益证明（Proof of Stake）。
+
+
+#### difficult to solve ,but easy to verify
+
+“难以解决，但易于验证”（difficult to solve, but easy to verify）是许多密码学问题和算法的核心特性。这种特性确保了在特定场景下的安全性和有效性，特别在区块链和加密货币中非常重要。具体来说：
+
+难以解决：意味着找到问题的解决方案需要大量的计算资源和时间。这使得恶意攻击者在试图破坏系统时变得更加困难。
+
+易于验证：一旦给定了解决方案，任何人都可以轻松地验证该解决方案是否正确。这通常涉及简单的计算或检查步骤，可以在短时间内完成。
+
+这种特性在以下领域中具有重要意义：
+
+工作量证明（Proof of Work）：矿工需要解决复杂的数学难题（难以解决），但其他网络参与者可以快速验证解决方案是否有效（易于验证）。
+
+数字签名：签名生成过程复杂，但验证签名的过程相对简单，确保了数据的完整性和来源的真实性。
+
+这种设计思想提高了系统的安全性，使得验证过程透明且高效，同时降低了潜在的攻击风险。
+
+
+
+#### SHA-256
+
+比特币中的使用的Hash.
+
+Secure Hash Algorithm
+
+安全哈希算法（Secure Hash Algorithm，SHA）是一系列广泛使用的加密哈希函数，由美国国家安全局（NSA）设计并由国家标准与技术研究院（NIST）发布。SHA算法的主要特征包括：
+
+固定输出长度：不论输入数据的大小如何，输出的哈希值长度都是固定的。例如，SHA-256输出256位（32字节）的哈希值。
+
+抗碰撞性：难以找到两个不同的输入生成相同的哈希值，确保数据的唯一性。
+
+单向性：从哈希值无法反推原始输入数据，提高安全性。
+
+敏感性：输入数据的微小变化会导致哈希值发生显著变化。
+
+常见的SHA算法版本包括：
+
+SHA-1：生成160位哈希值，已被认为不够安全，逐渐被淘汰。
+SHA-2：包括SHA-224、SHA-256、SHA-384和SHA-512，广泛用于安全通信和数据完整性验证。
+SHA-3：最新的SHA标准，基于Keccak算法，具有更高的灵活性和安全性。
+SHA算法在数字签名、密码存储和区块链等多种应用中具有重要作用。
+
+
+
+
+
+### 签名
+
+加密货币的钱包功能。
+
+加密货币开户的过程就是创建一对公钥和私钥（public key,private key）.
+
+
+asymmetric encryption algorithm.
+
+非对称加密算法是一种加密技术，使用一对密钥进行加密和解密：公钥和私钥。其主要特点包括：
+
+公钥与私钥：公钥可以公开给任何人，用于加密信息；私钥则必须保密，仅由持有者掌握，用于解密信息。
+
+安全性：即使公钥被公开，攻击者也无法轻易推算出私钥，从而确保数据的安全性。
+
+身份验证：非对称加密可以用于数字签名，确保信息来源的真实性和完整性。
+
+常见的非对称加密算法包括：
+
+RSA：基于大数分解的难题，广泛用于数据加密和数字签名。
+DSA（数字签名算法）：主要用于数字签名，而非加密数据。
+ECC（椭圆曲线密码学）：利用椭圆曲线数学提供高安全性与较短密钥长度的算法。
+非对称加密通常比对称加密速度慢，因此常与对称加密结合使用，以实现安全的数据交换和身份验证。
+
+
+非对称加解密，都是使用对方的公钥进行数据加密，数据接收方使用私钥解密。
+
+加密货币中公钥对应的是钱包的账号，私钥对应钱包中的取款密码。
+
+区域链上的数据是公开的，在发起主动操作行为时，使用私钥对修改的数据进行签名，然后发布到区块链上，其他人使用公钥结合签名验证发布的数据。
+
+生成公私钥
+a good source randomness,
+
+加密货币中生成公私钥时要使用好的随机源，每次签名时也要使用好的随机源，只要一个环节使用了不好的随机源，就有可能泄露私钥。
+
+
+良好的随机性来源是生成安全密钥、加密算法和其他密码学应用的关键。以下是一些推荐的高质量随机性来源：
+
+硬件随机数生成器（HRNG）：利用物理现象（如电子噪声、热噪声等）生成随机数，通常提供高质量的随机性。
+
+操作系统提供的随机数生成器：现代操作系统（如Linux的 /dev/random 和 /dev/urandom，Windows的 CryptGenRandom）提供的随机数接口，通常经过多次验证，能生成高质量随机数。
+
+密码学安全伪随机数生成器（CSPRNG）：基于加密算法的伪随机数生成器，如AES-CTR或SHA-256，可以在给定种子后生成随机数序列，适用于密码学应用。
+
+随机性聚合器：结合多个来源（如网络延迟、CPU温度等）来增强随机性，提供更高的安全性。
+
+确保使用高质量的随机性来源可以有效抵御预测和攻击，增强系统的整体安全性。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
