--- a/1.Introduction(基础知识)/1.1_What_is_Blockchain.md
+++ b/1.Introduction(基础知识)/1.1_What_is_Blockchain.md
@@ -1,4 +1,69 @@
-## 基础知识
+# 基础知识
 
 简单介绍区块链技术的历史和发展。
 
+
+## 区块链的底层原理依赖计算机科学的哪些元素
+
+区块链的底层原理依赖于计算机科学的多个元素，主要包括：
+
+数据结构：
+
+区块链本质上是一个链式数据结构，由一系列区块（blocks）组成，每个区块包含交易数据和一个指向前一个区块的哈希值。
+加密技术：
+
+使用哈希函数（如SHA-256）确保数据的完整性和不可篡改性。公钥和私钥加密用于身份验证和交易签名。
+分布式计算：
+
+区块链通常是去中心化的，数据在多个节点之间分布，所有节点共同维护网络的完整性。
+共识算法：
+
+确保所有节点对交易记录达成一致的机制，如工作量证明（PoW）、权益证明（PoS）等。
+网络协议：
+
+用于节点之间的通信，确保信息的有效传输和同步。
+智能合约：
+
+自动执行合约条款的代码，允许在区块链上进行复杂的逻辑处理。
+容错性：
+
+设计使得网络能够容忍部分节点故障或恶意行为，保持整体系统的可靠性。
+时间戳：
+
+每个区块通常包含时间戳，以确保交易的顺序性和时间记录。
+这些元素共同构成了区块链技术的基础，使其具备去中心化、透明、安全等特性。
+
+
+
+## 区块链技术的历史和发展可以分为几个重要阶段：
+
+1.早期概念（1990年代）：
+
+- 1991年，斯图尔特·哈伯和威尔士·比尔首次提出了区块链的概念，旨在创建一个不可篡改的时间戳系统，用于记录数字文档的时间。
+
+2.比特币的诞生（2008-2009年）：
+
+- 2008年，中本聪以“比特币：一种点对点的电子现金系统”为题发布白皮书，介绍了区块链作为比特币的底层技术。
+- 2009年，比特币网络正式上线，标志着区块链技术的实际应用开始。
+
+3.早期应用和扩展（2010年代初）：
+
+- 2010年，第一笔比特币交易发生，随后比特币逐渐受到关注，出现了多个加密货币。
+- 2013年，以太坊的推出引入了智能合约的概念，推动了区块链技术的进一步发展。
+
+4.技术成熟与企业应用（2015年以后）：
+
+- 2015年，以太坊主网启动，智能合约和去中心化应用（DApps）的开发逐渐兴起。
+- 企业和机构开始探索区块链的应用，如金融服务、供应链管理、身份验证等。
+
+5.技术多样化与规范化（2020年代）：
+
+- 各种新兴区块链平台和协议（如Hyperledger、EOS、Polkadot等）不断涌现，满足不同的行业需求。
+- 各国政府和组织开始制定区块链技术的标准和法规，以推动其健康发展。
+
+6.NFT和DeFi的兴起（2021年）：
+
+- 非同质化代币（NFT）和去中心化金融（DeFi）在2021年获得广泛关注，展示了区块链技术在艺术、游戏和金融等领域的潜力。
+
+
+总体而言，区块链技术从早期的概念到如今的多元化应用经历了快速发展，已成为数字经济的重要组成部分。
