--- a/1.Introduction(基础知识)/1.3_Blockchain_Terminology.md
+++ b/1.Introduction(基础知识)/1.3_Blockchain_Terminology.md
@@ -1,4 +1,71 @@
-## 基础知识
+# 基础知识
 
 汇总一些常见的区块链术语，并做简单解释。
+
+
+## 区块（Block）：
+
+区块链的基本单位，包含一组交易记录、时间戳和前一个区块的哈希值。
+
+## 链（Chain）：
+
+将多个区块按时间顺序连接在一起的结构，确保数据的顺序性和完整性。
+
+## 哈希（Hash）：
+
+通过哈希函数将数据转换为固定长度的字符串，确保数据完整性和不可篡改性。
+
+## 矿工（Miner）：
+
+参与验证交易并创建新区块的节点，通过解决复杂数学问题获得奖励。
+
+## 工作量证明（Proof of Work, PoW）：
+
+一种共识机制，矿工通过计算力竞争解决数学问题，以验证交易和创建区块。
+
+## 权益证明（Proof of Stake, PoS）：
+
+一种共识机制，节点根据持有的代币数量和时间进行交易验证。
+
+## 智能合约（Smart Contract）：
+
+自动执行合约条款的程序代码，能够在区块链上进行复杂的逻辑处理。
+
+## 去中心化（Decentralization）：
+
+网络没有中心化管理者，所有节点共同维护数据，提高安全性和抗攻击能力。
+
+## 钱包（Wallet）：
+
+存储加密货币和管理交易的工具，包括热钱包（在线）和冷钱包（离线）。
+
+## 私钥（Private Key）：
+
+用户的秘密密钥，用于签名交易，只有持有者能够控制相应的资产。
+
+## 公钥（Public Key）：
+
+与私钥成对的公开密钥，用于接收资金和验证交易签名。
+
+## 分叉（Fork）：
+
+区块链的分支，可能是由于协议更新（软分叉）或创建新币（硬分叉）。
+
+## 交易（Transaction）：
+
+区块链上用户之间转移资产的记录，包含发起者、接收者和转移金额等信息。
+
+## 共识机制（Consensus Mechanism）：
+
+确保所有节点就交易记录达成一致的协议，包括PoW、PoS等。
+
+## 去信任化（Trustlessness）：
+
+区块链通过技术手段实现交易不依赖于任何第三方，从而消除信任的需求。
+
+## 非同质化代币（NFT）：
+
+独特的数字资产，代表特定的物品或权益，无法互换。
+
+这些术语帮助理解区块链的基本构建块和操作原理。
 
